[gd_scene load_steps=25 format=3 uid="uid://b454m7v44683q"]

[ext_resource type="Script" path="res://assets/game_manager/scripts/menu.gd" id="1_5rt6y"]
[ext_resource type="Texture2D" uid="uid://dsm7ltmwlrnk3" path="res://assets/game_manager/Sprites/coverart.png" id="2_l5ndu"]
[ext_resource type="PackedScene" path="res://assets/game_manager/Scenes/play_button.tscn" id="3_0y1my"]
[ext_resource type="Script" path="res://assets/game_manager/scripts/menucursor.gd" id="7_b46p4"]
[ext_resource type="Texture2D" uid="uid://cqdp5x2dgb40t" path="res://assets/game_manager/animations/gozi_cursor.png" id="8_kuwba"]
[ext_resource type="PackedScene" uid="uid://ced8tygwinyqc" path="res://assets/game_manager/Scenes/Letter.tscn" id="9_ve6p2"]
[ext_resource type="Texture2D" uid="uid://blme74t6bc3kk" path="res://assets/game_manager/Sprites/u.png" id="10_7gpa8"]
[ext_resource type="Texture2D" uid="uid://dqne0aqvdhu7u" path="res://assets/game_manager/Sprites/l.png" id="11_jlcun"]
[ext_resource type="Texture2D" uid="uid://dotygla8rgkvg" path="res://assets/game_manager/Sprites/e.png" id="12_pbq4t"]
[ext_resource type="Texture2D" uid="uid://wnkcqc86as6x" path="res://assets/game_manager/Sprites/w.png" id="13_guciv"]
[ext_resource type="Texture2D" uid="uid://c1o0w3j6vdxtx" path="res://assets/game_manager/Sprites/a.png" id="14_d66pr"]
[ext_resource type="Texture2D" uid="uid://bcqoraqhttwnj" path="res://assets/game_manager/Sprites/r.png" id="15_lgft4"]
[ext_resource type="AudioStream" uid="uid://bu8ck5ri0iwke" path="res://assets/audio/Bubbleware Collab.wav" id="16_nqigu"]
[ext_resource type="AudioStream" uid="uid://dy471hcu6ecl1" path="res://assets/audio/Main Menu - Bubs!.wav" id="17_nyvre"]
[ext_resource type="PackedScene" uid="uid://dv0fmgdc8q6bc" path="res://game_manager/sound_controls.tscn" id="18_0d1dl"]
[ext_resource type="Texture2D" uid="uid://cjkr33ip3jtpx" path="res://assets/game_manager/Sprites/volume_button.png" id="19_6fdhp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_diiml"]
atlas = ExtResource("8_kuwba")
region = Rect2(300, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kvjb"]
atlas = ExtResource("8_kuwba")
region = Rect2(0, 0, 300, 300)

[sub_resource type="SpriteFrames" id="SpriteFrames_37y6f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_diiml")
}],
"loop": true,
"name": &"click",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kvjb")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5i8d4"]
radius = 58.0775

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_jho10"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_dg8hl"]
normal = Vector2(-0.00335569, 0.999994)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_0pcj8"]
normal = Vector2(0.999967, -0.00812981)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_wax61"]
normal = Vector2(-1, -0.000935453)

[node name="Main Menu" type="Node2D"]
script = ExtResource("1_5rt6y")

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(0.514448, 0.726878, 0.893422, 1)
z_index = -1
position = Vector2(500, 500)
texture = ExtResource("2_l5ndu")

[node name="Play Button" parent="." instance=ExtResource("3_0y1my")]
position = Vector2(879, 870)

[node name="BUBBLEWARE" type="Node" parent="."]

[node name="Cursor" type="RigidBody2D" parent="."]
z_index = 10
position = Vector2(238, 753)
gravity_scale = 0.0
script = ExtResource("7_b46p4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Cursor"]
scale = Vector2(0.63644, 0.63644)
sprite_frames = SubResource("SpriteFrames_37y6f")
animation = &"click"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cursor"]
position = Vector2(-14, 6)
shape = SubResource("CircleShape2D_5i8d4")

[node name="Bubbleware" type="Node" parent="."]

[node name="B1" parent="Bubbleware" instance=ExtResource("9_ve6p2")]
position = Vector2(95, 118)
collision_layer = 2
collision_mask = 3
gravity_scale = 0.01

[node name="U" parent="Bubbleware" instance=ExtResource("9_ve6p2")]
position = Vector2(184, 111)
collision_layer = 2
collision_mask = 3

[node name="Sprite2D" parent="Bubbleware/U" index="0"]
texture = ExtResource("10_7gpa8")

[node name="B2" parent="Bubbleware" instance=ExtResource("9_ve6p2")]
position = Vector2(271, 100)
collision_layer = 2
collision_mask = 3

[node name="B3" parent="Bubbleware" instance=ExtResource("9_ve6p2")]
position = Vector2(360, 100)
collision_layer = 2
collision_mask = 3

[node name="L" parent="Bubbleware" instance=ExtResource("9_ve6p2")]
position = Vector2(447, 98)
collision_layer = 2
collision_mask = 3

[node name="Sprite2D" parent="Bubbleware/L" index="0"]
texture = ExtResource("11_jlcun")

[node name="E" parent="Bubbleware" instance=ExtResource("9_ve6p2")]
position = Vector2(535, 100)
collision_layer = 2
collision_mask = 3

[node name="Sprite2D" parent="Bubbleware/E" index="0"]
texture = ExtResource("12_pbq4t")

[node name="W" parent="Bubbleware" instance=ExtResource("9_ve6p2")]
position = Vector2(631, 105)
collision_layer = 2
collision_mask = 3

[node name="Sprite2D" parent="Bubbleware/W" index="0"]
texture = ExtResource("13_guciv")

[node name="A" parent="Bubbleware" instance=ExtResource("9_ve6p2")]
position = Vector2(729, 103)
collision_layer = 2
collision_mask = 3

[node name="Sprite2D" parent="Bubbleware/A" index="0"]
texture = ExtResource("14_d66pr")

[node name="R" parent="Bubbleware" instance=ExtResource("9_ve6p2")]
position = Vector2(819, 104)
collision_layer = 2
collision_mask = 3

[node name="Sprite2D" parent="Bubbleware/R" index="0"]
texture = ExtResource("15_lgft4")

[node name="E2" parent="Bubbleware" instance=ExtResource("9_ve6p2")]
position = Vector2(905, 110)
collision_layer = 2
collision_mask = 3

[node name="Sprite2D" parent="Bubbleware/E2" index="0"]
texture = ExtResource("12_pbq4t")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Bottom Boundry" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(498, 1013)
shape = SubResource("WorldBoundaryShape2D_jho10")

[node name="Top Boundry" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(547, -5)
shape = SubResource("WorldBoundaryShape2D_dg8hl")

[node name="Left Boundry" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-5, 312)
shape = SubResource("WorldBoundaryShape2D_0pcj8")

[node name="Right Boundry" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1010, 491)
shape = SubResource("WorldBoundaryShape2D_wax61")

[node name="BubbleWareVoices" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_nqigu")
autoplay = true
bus = &"Voice"

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_nyvre")
bus = &"Music"

[node name="SoundControls" parent="." instance=ExtResource("18_0d1dl")]

[node name="TextureButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(100, 100)
offset_left = 564.0
offset_top = 884.0
offset_right = 664.0
offset_bottom = 984.0
rotation = -0.438138
mouse_default_cursor_shape = 2
texture_normal = ExtResource("19_6fdhp")
texture_pressed = ExtResource("19_6fdhp")
texture_hover = ExtResource("19_6fdhp")
texture_disabled = ExtResource("19_6fdhp")
texture_focused = ExtResource("19_6fdhp")
ignore_texture_size = true
stretch_mode = 0

[connection signal="play_button_pressed" from="Play Button" to="." method="_on_play_button_pressed"]
[connection signal="finished" from="BubbleWareVoices" to="." method="_on_bubble_ware_voices_finished"]
[connection signal="pressed" from="TextureButton" to="SoundControls" method="slide_in"]

[editable path="Bubbleware/U"]
[editable path="Bubbleware/B2"]
[editable path="Bubbleware/L"]
[editable path="Bubbleware/E"]
[editable path="Bubbleware/W"]
[editable path="Bubbleware/A"]
[editable path="Bubbleware/R"]
[editable path="Bubbleware/E2"]
